--- a/eureka-admin-view/src/main/resources/static/eurekaindex.html
+++ b/eureka-admin-view/src/main/resources/static/eurekaindex.html
@@ -20,7 +20,7 @@
 
 <header class="am-topbar am-text-sm am-margin-bottom-0">
 	<div class="am-topbar-brand">
-		<strong>Eureka Admin</strong> <small id="companyName"></small>
+		<img alt="" src="./res/img/nav.png" style="margin-top: 10px;"> <small id="companyName"></small>
 	</div>
 
 	<button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only" data-am-collapse="{target: '#topbar-collapse'}">
@@ -30,12 +30,12 @@
 	<div class="am-collapse am-topbar-collapse" id="topbar-collapse">
 		<ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right admin-header-list">
 			<li class="am-dropdown" data-am-dropdown>
-				<a class="am-dropdown-toggle" data-am-dropdown-toggle href="javascript:;"> 
+<!-- 				<a class="am-dropdown-toggle" data-am-dropdown-toggle href="javascript:;"> 
 					<span class="am-icon-user">&nbsp;</span>Lovnx&nbsp;<span class="am-icon-caret-down"></span>
 				</a>
 				<ul class="am-dropdown-content">
 					<li><a href="javascript:void(0);"><span class="am-icon-power-off"></span> Sign Out</a></li>
-				</ul>
+				</ul> -->
 			</li>
 		</ul>
 	</div>
@@ -51,7 +51,7 @@
 		<div class="admin-content-body" id="contentBody"></div>
 		<footer class="admin-content-footer am-text-center" id="footer">
 			<hr class="am-margin-0">
-			<p class="am-padding-left am-margin-xs">©2015-2018 www.springcloud.cn All rights reserved</p>
+			<p class="am-padding-left am-margin-xs">©2015-2018 www.springcloud.cn All Rights Reserved</p>
 		</footer>
 	</div>
 	<!-- content end -->
@@ -81,7 +81,7 @@
 			icon: 'fa-tachometer',
 			url: 'views/home.html'
 		},{
-			name: 'Admin',
+			name: 'Service Admin',
 			icon: 'fa-tachometer',
 			url: 'views/services.html'
 		}];
